<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/setting_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/return32"
                android:text="返回"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/login_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginagain" />

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/update_G"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/updateG" />

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/update_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/updateV" />

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/Inspect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspect" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>